# OwlPDF

./: .gitignore  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  Info.plist  README.md  app.icns  main.cpp  resources.qrc  vcpkg.json
cmake/: dependencies.cmake  deploy.cmake  postbuild.cmake  vcpkg.cmake
core/: papereffectenhancer.cpp  papereffectenhancer.h  perthreadmupdfrenderer.cpp  perthreadmupdfrenderer.h  scanenhancer.cpp  scanenhancer.h
handler/: pdfannotationhandler.cpp  pdfannotationhandler.h  pdfcontenthandler.cpp  pdfcontenthandler.h  pdfinteractionhandler.cpp  pdfinteractionhandler.h  pdfviewhandler.cpp  pdfviewhandler.h
manager/: annotationmanager.cpp  annotationmanager.h  linkmanager.cpp  linkmanager.h  ocrmanager.cpp  ocrmanager.h  outlinemanager.cpp  outlinemanager.h  pagecachemanager.cpp  pagecachemanager.h  searchmanager.cpp  searchmanager.h  textcachemanager.cpp  textcachemanager.h  thumbnailbatchtask.cpp  thumbnailbatchtask.h  thumbnailmanagerv2.cpp  thumbnailmanagerv2.h
model/: inkstroke.h  outlineitem.h  thumbnailcache.cpp  thumbnailcache.h  thumbnailloadstrategy.cpp  thumbnailloadstrategy.h
ocr/: chinesetokenizer.cpp  chinesetokenizer.h  iocrengine.h  ocrenginefactory.cpp  rapidocrengine.cpp  rapidocrengine.h  textutil.h  visionocrengine.h  visionocrengine.mm
ocr/rapidocr-cpp/: ortinfersession.h  rapidocr.cpp
resources/styles/components/: dialog.qss  mainwindow.qss  menu.qss  navigationpanel.qss  outlinewidget.qss  pdfpagewidget.qss  searchwidget.qss  statusbar.qss  toolbar.qss
resources/styles/themes/: light.qss
scripts/: package_mac.sh
session/: pdfdocumentsession.cpp  pdfdocumentsession.h  pdfdocumentstate.cpp  pdfdocumentstate.h
tool/: annotationpdfio.cpp  annotationpdfio.h  dictionaryconnector.cpp  dictionaryconnector.h  outlineeditor.cpp  outlineeditor.h  textselector.cpp  textselector.h
translations/: muqt_en_US.ts  muqt_zh_CN.ts  owlpdf_en_US.ts  owlpdf_zh_CN.ts
ui/: annotationwidget.cpp  annotationwidget.h  fileassociationmanager.cpp  fileassociationmanager.h  firstrundialog.cpp  firstrundialog.h  mainwindow.cpp  mainwindow.h  navigationpanel.cpp  navigationpanel.h  outlinedialog.cpp  outlinedialog.h  outlinewidget.cpp  outlinewidget.h  pdfdocumenttab.cpp  pdfdocumenttab.h  pdfpagewidget.cpp  pdfpagewidget.h  searchwidget.cpp  searchwidget.h  settingsdialog.cpp  settingsdialog.h  thumbnailwidget.cpp  thumbnailwidget.h
ui/ocr/: ocrfloatingwidget.cpp  ocrstatusindicator.cpp  ocrstatusindicator.h
ui/theme/: stylemanager.cpp  stylemanager.h  themedicon.cpp  themedicon.h
util/: appconfig.cpp  appconfig.h  datastructure.h
